Tweak java diagnostics for java 11